Make event actions installable
(cherry picked from commit e579fe115be87cab0cc074fd47c3ddd6612c18cf)

--- a/libs/pilight/events/actions/CMakeLists.txt
+++ b/libs/pilight/events/actions/CMakeLists.txt
@@ -1,6 +1,6 @@
-file(GLOB operators "${PROJECT_SOURCE_DIR}/operators/*.lua")
+file(GLOB actions "${PROJECT_SOURCE_DIR}/actions/*.lua")
 if(WIN32)
-	install(FILES ${operators} DESTINATION operators/ COMPONENT pilight)
+	install(FILES ${actions} DESTINATION actions/ COMPONENT pilight)
 else()
-	install(FILES ${operators} DESTINATION lib/pilight/operators/ COMPONENT pilight)
+	install(FILES ${actions} DESTINATION lib/pilight/actions/ COMPONENT pilight)
 endif()
