--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,7 +135,7 @@ if(${MODULESPACK} MATCHES "ON" AND NOT WIN32)
 endif()
 
 if(NOT WIN32)
-	if(${PROTOCOL_ARPING} MATCHES "ON")
+	if(${PROTOCOL_ARPING} MATCHES "ON" AND NOT ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^aarch64")
 		set(CMAKE_PCAP_LIBS_INIT)
 
 		find_library(CMAKE_PCAP_LIBS_INIT
@@ -164,7 +164,7 @@ if(NOT WIN32)
 
 	set(CMAKE_UNWIND_LIBS_INIT)
 
-	if(NOT ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^mips")
+	if(NOT ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^mips" AND NOT ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^aarch64")
 		find_library(CMAKE_UNWIND_LIBS_INIT
 		NAME unwind
 		PATHS
@@ -282,27 +282,29 @@ else()
 	message(STATUS "Looking for libmbedx509 - found (${CMAKE_MBEDX509_LIBS_INIT})")
 endif()
 
-find_library(CMAKE_LUA_LIBS_INIT
-	NAME luajit-5.1
-	PATHS
-	${CROSS_COMPILE_LIBS}
-	/usr/lib
-	/usr/lib32
-	/usr/lib64
-	/usr/lib/i386-linux-gnu
-	/usr/lib/x86_64-linux-gnu
-	/usr/local/lib
-	/usr/local/lib32
-	/usr/local/lib64
-	/usr/lib/arm-linux-gnueabi
-	/usr/lib/arm-linux-gnueabihf
-	/usr/lib/aarch64-linux-gnu
-NO_DEFAULT_PATH)
+if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "^aarch64")
+	find_library(CMAKE_LUA_LIBS_INIT
+		NAME lua51
+		PATHS
+		${CROSS_COMPILE_LIBS}
+		/usr/lib
+		/usr/lib32
+		/usr/lib64
+		/usr/lib/i386-linux-gnu
+		/usr/lib/x86_64-linux-gnu
+		/usr/local/lib
+		/usr/local/lib32
+		/usr/local/lib64
+		/usr/lib/arm-linux-gnueabi
+		/usr/lib/arm-linux-gnueabihf
+		/usr/lib/aarch64-linux-gnu
+	NO_DEFAULT_PATH)
 
-if(${CMAKE_LUA_LIBS_INIT} MATCHES "CMAKE_LUA_LIBS_INIT-NOTFOUND")
-	message(FATAL_ERROR "Looking for libluajit - not found")
-else()
-	message(STATUS "Looking for libluajit - found (${CMAKE_LUA_LIBS_INIT})")
+	if(${CMAKE_LUA_LIBS_INIT} MATCHES "CMAKE_LUA_LIBS_INIT-NOTFOUND")
+		message(FATAL_ERROR "Looking for libluajit - not found")
+	else()
+		message(STATUS "Looking for libluajit - found (${CMAKE_LUA_LIBS_INIT})")
+	endif()
 endif()
 
 include_directories(${PROJECT_SOURCE_DIR}/inc)
