--- a/res/deb/pilight/control
+++ b/res/deb/pilight/control
@@ -3,7 +3,7 @@ Version: @version@
 Section: devel
 Priority: optional
 Architecture: @arch@
-Depends: pilight-webgui (>= @webgui@), libunwind8, libpcap0.8, libmbedcrypto0, libmbedtls10, libmbedx509-0, libwiringx (>= 2.0), libluajit-5.1-2
+Depends: pilight-webgui (>= @webgui@), libunwind8, libpcap0.8, libmbedcrypto0, libmbedtls10, libmbedx509-0, libwiringx (>= 2.0), libluajit-5.1-2 | liblua5.1-0
 Conflicts: @conflicts@
 Installed-Size: @size@
 Suggests: php5-cgi, pilight-firmware (>= 3.0)
