Added file io to lua library
The original io library shipped with lua
interferes with signal handling. This makes
it impossible to catch signals like CTRL-C
in a program using a lua interface. Therefor
a custom io library has been created.

(cherry picked from commit 5ea10527ee86c8ba0c3e92e8caccfdb9806a7b6d)

--- a/libs/pilight/lua/CMakeLists.txt
+++ b/libs/pilight/lua/CMakeLists.txt
@@ -4,6 +4,7 @@ set(${PROJECT_NAME}_files "" CACHE INTERNAL "")
 
 add_subdirectory(devices)
 add_subdirectory(network)
+add_subdirectory(io)
 
 file(GLOB ${PROJECT_NAME}_sources "${PROJECT_SOURCE_DIR}/*.c")
 file(GLOB ${PROJECT_NAME}_headers "${PROJECT_SOURCE_DIR}/*.h")
@@ -14,4 +15,5 @@ set(${PROJECT_NAME}_files
 	${${PROJECT_NAME}_files}
 	${${PROJECT_NAME}_devices_files}
 	${${PROJECT_NAME}_network_files}
+	${${PROJECT_NAME}_io_files}
 CACHE INTERNAL "")
