--- a/libs/pilight/lua/CMakeLists.txt
+++ b/libs/pilight/lua/CMakeLists.txt
@@ -4,6 +4,7 @@ set(${PROJECT_NAME}_files "" CACHE INTERNAL "")
 
 add_subdirectory(config)
 add_subdirectory(network)
+add_subdirectory(io)
 
 file(GLOB ${PROJECT_NAME}_sources "${PROJECT_SOURCE_DIR}/*.c")
 file(GLOB ${PROJECT_NAME}_headers "${PROJECT_SOURCE_DIR}/*.h")
@@ -13,4 +14,5 @@ set(${PROJECT_NAME}_files
 	${${PROJECT_NAME}_headers}
 	${${PROJECT_NAME}_config_files}
 	${${PROJECT_NAME}_network_files}
+	${${PROJECT_NAME}_io_files}
 CACHE INTERNAL "")
