--- a/libs/pilight/lua/config/devices/CMakeLists.txt
+++ b/libs/pilight/lua/config/devices/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(pilight_lua_devices)
+project(pilight_lua_config_devices)
 
 file(GLOB ${PROJECT_NAME}_sources "${PROJECT_SOURCE_DIR}/*.c")
 file(GLOB ${PROJECT_NAME}_headers "${PROJECT_SOURCE_DIR}/*.h")
