--- a/libs/pilight/CMakeLists.txt
+++ b/libs/pilight/CMakeLists.txt
@@ -25,8 +25,8 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	add_subdirectory(hardware)
 	set(${PROJECT_NAME}_files	${${PROJECT_NAME}_files} ${${PROJECT_NAME}_hardware_files} CACHE INTERNAL "")
 
-	add_subdirectory(lua)
-	set(${PROJECT_NAME}_files	${${PROJECT_NAME}_files} ${${PROJECT_NAME}_lua_files} CACHE INTERNAL "")
+	add_subdirectory(lua_c)
+	set(${PROJECT_NAME}_files	${${PROJECT_NAME}_files} ${${PROJECT_NAME}_lua_c_files} CACHE INTERNAL "")
 else()
 	if(${EVENTS} MATCHES "ON")
 		add_subdirectory(events)
