--- a/inc/defines.h.in
+++ b/inc/defines.h.in
@@ -58,6 +58,7 @@
 	#define OPERATOR_ROOT						"c:/pilight/operators/"
 	#define FUNCTION_ROOT						"c:/pilight/functions/"
 	#define ACTION_ROOT							"c:/pilight/actions/"
+	#define LUA_ROOT								"c:/pilight/lua/"
 
 	#define CONFIG_FILE							"c:/pilight/config.json"
 	#define LOG_FILE								"c:/pilight/pilight.log"
@@ -69,6 +70,7 @@
 	#define OPERATOR_ROOT						"/usr/local/lib/pilight/operators/"
 	#define FUNCTION_ROOT						"/usr/local/lib/pilight/functions/"
 	#define ACTION_ROOT							"/usr/local/lib/pilight/actions/"
+	#define LUA_ROOT								"/usr/local/lib/pilight/lua/"
 
 	#define PID_FILE								"/var/run/pilight.pid"
 	#define CONFIG_FILE							"/etc/pilight/config.json"
