Just override wiringx in unittest at compile time

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -172,14 +172,14 @@ if(NOT WIN32)
 				/usr/lib
 				/usr/lib32
 				/usr/lib64
-				/usr/lib/i386-linux-gnu		
+				/usr/lib/i386-linux-gnu
 				/usr/lib/x86_64-linux-gnu
 				/usr/local/lib
 				/usr/local/lib32
 				/usr/local/lib64
 				/usr/lib/arm-linux-gnueabi
 				/usr/lib/arm-linux-gnueabihf
-			NO_DEFAULT_PATH)	
+			NO_DEFAULT_PATH)
 
 		if(${CMAKE_PCAP_LIBS_INIT} MATCHES "CMAKE_PCAP_LIBS_INIT-NOTFOUND")
 			message(FATAL_ERROR "Looking for libpcap - not found")
@@ -321,7 +321,7 @@ endif()
 	find_package(Threads REQUIRED)
 #endif()
 if(NOT WIN32)
-	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")	
+	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
 		find_package(Backtrace REQUIRED)
 	endif()
 endif()
@@ -334,12 +334,12 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	if(WIN32)
 		add_custom_command(OUTPUT ${PROJECT_SOURCE_DIR}/res/win32/admin.obj COMMAND ${CMAKE_RC_COMPILER} /Fo ${PROJECT_SOURCE_DIR}/res/win32/admin.obj ${PROJECT_SOURCE_DIR}/res/win32/admin.rc)
 		add_custom_command(OUTPUT ${PROJECT_SOURCE_DIR}/res/win32/icon.obj COMMAND ${CMAKE_RC_COMPILER} /Fo ${PROJECT_SOURCE_DIR}/res/win32/icon.obj ${PROJECT_SOURCE_DIR}/res/win32/icon.rc)
-		add_library(admin STATIC ${PROJECT_SOURCE_DIR}/res/win32/admin.obj)	
-		add_library(icon STATIC ${PROJECT_SOURCE_DIR}/res/win32/icon.obj)	
+		add_library(admin STATIC ${PROJECT_SOURCE_DIR}/res/win32/admin.obj)
+		add_library(icon STATIC ${PROJECT_SOURCE_DIR}/res/win32/icon.obj)
 		set_source_files_properties(${PROJECT_SOURCE_DIR}/res/win32/admin.obj PROPERTIES EXTERNAL_OBJECT true GENERATED true)
 		set_source_files_properties(${PROJECT_SOURCE_DIR}/res/win32/icon.obj PROPERTIES EXTERNAL_OBJECT true GENERATED true)
-		set_target_properties(admin PROPERTIES LINKER_LANGUAGE C)	
-		set_target_properties(icon PROPERTIES LINKER_LANGUAGE C)	
+		set_target_properties(admin PROPERTIES LINKER_LANGUAGE C)
+		set_target_properties(icon PROPERTIES LINKER_LANGUAGE C)
 	endif()
 
 	add_library(${PROJECT_NAME} OBJECT ${libs_files})
@@ -367,6 +367,7 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 		add_library(gpio_shared SHARED $<TARGET_OBJECTS:GPIO>)
 		set_property(TARGET dso_shared PROPERTY C_STANDARD 99)
 		set_property(TARGET gpio_shared PROPERTY C_STANDARD 99)
+                target_link_libraries(${PROJECT_NAME}_shared gpio_shared)
 	endif()
 
 	set_property(TARGET ${PROJECT_NAME}_static PROPERTY C_STANDARD 99)
@@ -449,13 +450,13 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 		target_link_libraries(${PROJECT_NAME}_static ${CMAKE_SSL_LIBS_INIT})
 		target_link_libraries(${PROJECT_NAME}_static ${CMAKE_CRYPTO_LIBS_INIT})
 		target_link_libraries(${PROJECT_NAME}_static ${CMAKE_ZLIB_LIBS_INIT})
-	endif()	
-	
+	endif()
+
 	if(${PROTOCOL_ARPING} MATCHES "ON")
 		target_link_libraries(${PROJECT_NAME}_shared ${CMAKE_PCAP_LIBS_INIT})
 		target_link_libraries(${PROJECT_NAME}_static ${CMAKE_PCAP_LIBS_INIT})
 	endif()
-		
+
 	if(NOT WIN32)
 		if(CMAKE_BUILD_TYPE MATCHES DEBUG AND NOT ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^mips" AND NOT ${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
 			# target_link_libraries(${PROJECT_NAME}_shared asan)
@@ -500,10 +501,10 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 		if(EXISTS "/etc/${PROJECT_NAME}/config.json")
 			install(CODE "execute_process(COMMAND mv /etc/${PROJECT_NAME}/config.json /etc/${PROJECT_NAME}/config.json.bak)")
 		endif()
-		
+
 		if(EXISTS "/etc/${PROJECT_NAME}/pilight.pem")
 			install(CODE "execute_process(COMMAND mv /etc/${PROJECT_NAME}/pilight.pem /etc/${PROJECT_NAME}/pilight.pem.bak)")
-		endif()		
+		endif()
 
 		install(PROGRAMS ${PROJECT_SOURCE_DIR}/res/init/${PROJECT_NAME}.initd DESTINATION /etc/init.d/ RENAME ${PROJECT_NAME})
 		install(FILES ${PROJECT_SOURCE_DIR}/res/config/config.json-default DESTINATION /etc/${PROJECT_NAME}/ RENAME config.json COMPONENT ${PROJECT_NAME})
@@ -575,7 +576,7 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	else()
 		target_link_libraries(${PROJECT_NAME}-daemon ${CMAKE_THREAD_LIBS_INIT})
 	endif()
-	
+
 	if(WIN32)
 		add_executable(${PROJECT_NAME}-raw raw.c ${PROJECT_SOURCE_DIR}/res/win32/icon.obj)
 	else()
@@ -725,9 +726,9 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 		target_link_libraries(${PROJECT_NAME}-sha256 ${Backtrace_LIBRARIES})
 	endif()
 	if(CMAKE_BUILD_TYPE MATCHES DEBUG AND ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^mips")
-		target_link_libraries(${PROJECT_NAME}-sha256 pthread)	
+		target_link_libraries(${PROJECT_NAME}-sha256 pthread)
 	else()
-		target_link_libraries(${PROJECT_NAME}-sha256 ${CMAKE_THREAD_LIBS_INIT})	
+		target_link_libraries(${PROJECT_NAME}-sha256 ${CMAKE_THREAD_LIBS_INIT})
 	endif()
 
 	if(WIN32)
@@ -746,7 +747,7 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
 		target_link_libraries(${PROJECT_NAME}-flash ${Backtrace_LIBRARIES})
 	endif()
-	if(CMAKE_BUILD_TYPE MATCHES DEBUG AND ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^mips")	
+	if(CMAKE_BUILD_TYPE MATCHES DEBUG AND ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^mips")
 		target_link_libraries(${PROJECT_NAME}-flash pthread)
 	else()
 		target_link_libraries(${PROJECT_NAME}-flash ${CMAKE_THREAD_LIBS_INIT})
