Added lua serial interface

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,13 +12,17 @@ if(NOT CMAKE_BUILD_TYPE)
 	set(CMAKE_BUILD_TYPE DEBUG)
 endif()
 
-set (CMAKE_C_STANDARD 90)
+set(CMAKE_C_STANDARD 90)
 set(CMAKE_SKIP_RULE_DEPENDENCY TRUE)
 set(CPACK_DEB_COMPONENT_INSTALL TRUE)
 
 if(COVERALLS)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O0") # debug, no optimisation
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --coverage") # enabling coverage
+endif()
+
+if(${PILIGHT_UNITTEST})
+	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-stack-protector")
 endif()
 
 if(${WEBSERVER_HTTPS} MATCHES "OFF")
@@ -349,6 +353,7 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	if(${PILIGHT_UNITTEST})
 		add_library(DSO OBJECT ${PROJECT_SOURCE_DIR}/tests/libdso.c)
 		add_library(GPIO OBJECT ${PROJECT_SOURCE_DIR}/tests/libgpio.c)
+		add_library(SERIAL OBJECT ${PROJECT_SOURCE_DIR}/tests/libserial.c)
 		set_property(TARGET DSO PROPERTY POSITION_INDEPENDENT_CODE TRUE)
 		set_property(TARGET DSO PROPERTY C_STANDARD 99)
 		set_property(TARGET GPIO PROPERTY POSITION_INDEPENDENT_CODE TRUE)
@@ -365,9 +370,11 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	if(${PILIGHT_UNITTEST})
 		add_library(dso_shared SHARED $<TARGET_OBJECTS:DSO>)
 		add_library(gpio_shared SHARED $<TARGET_OBJECTS:GPIO>)
+		add_library(serial_shared SHARED $<TARGET_OBJECTS:SERIAL>)
 		set_property(TARGET dso_shared PROPERTY C_STANDARD 99)
 		set_property(TARGET gpio_shared PROPERTY C_STANDARD 99)
-                target_link_libraries(${PROJECT_NAME}_shared gpio_shared)
+		set_property(TARGET serial_shared PROPERTY C_STANDARD 99)
+		target_link_libraries(${PROJECT_NAME}_shared gpio_shared)
 	endif()
 
 	set_property(TARGET ${PROJECT_NAME}_static PROPERTY C_STANDARD 99)
@@ -471,6 +478,7 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	if(${PILIGHT_UNITTEST})
 		set_target_properties(dso_shared PROPERTIES OUTPUT_NAME dso)
 		set_target_properties(gpio_shared PROPERTIES OUTPUT_NAME gpio)
+		set_target_properties(serial_shared PROPERTIES OUTPUT_NAME serial)
 	endif()
 
 	if(NOT WIN32)
