Fixed -fpic compilation of libserial.c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -358,6 +358,8 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 		set_property(TARGET DSO PROPERTY C_STANDARD 99)
 		set_property(TARGET GPIO PROPERTY POSITION_INDEPENDENT_CODE TRUE)
 		set_property(TARGET GPIO PROPERTY C_STANDARD 99)
+		set_property(TARGET SERIAL PROPERTY POSITION_INDEPENDENT_CODE TRUE)
+		set_property(TARGET SERIAL PROPERTY C_STANDARD 99)
 	endif()
 
 	add_library(${PROJECT_NAME}_static STATIC $<TARGET_OBJECTS:${PROJECT_NAME}>)
