--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,11 @@ if(CMAKE_BUILD_TOOL MATCHES "make")
   endif(NOT CMAKE_C_FLAGS MATCHES "-Wall")
 endif(CMAKE_BUILD_TOOL MATCHES "make")
 
+IF(CMAKE_COMPILER_IS_GNUCC)
+	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
+ENDIF(CMAKE_COMPILER_IS_GNUCC)
+
 if(NOT WIN32)
   string(ASCII 27 Esc)
   set(ColorReset "${Esc}[m")
@@ -560,258 +565,6 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 		set_target_properties(${PROJECT_ROOT_NAME}-unittest PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
 	endif()
 
-	if(WIN32)
-		add_executable(${PROJECT_NAME}-daemon daemon.c ${PROJECT_SOURCE_DIR}/res/win32/icon.obj)
-		target_link_libraries(${PROJECT_NAME}-daemon "-Wl,--subsystem,windows")
-	else()
-		add_executable(${PROJECT_NAME}-daemon daemon.c)
-	endif()
-	target_link_libraries(${PROJECT_NAME}-daemon ${PROJECT_NAME}_shared)
-	#
-	# libefence
-	#
-	# target_link_libraries(${PROJECT_NAME}-daemon ${CMAKE_SOURCE_DIR}/build/libefence.a)
-	if(${ZWAVE} MATCHES "ON")
-		target_link_libraries(${PROJECT_NAME}-daemon stdc++)
-	endif()
-	target_link_libraries(${PROJECT_NAME}-daemon ${CMAKE_DL_LIBS})
-	if(NOT WIN32)
-		target_link_libraries(${PROJECT_NAME}-daemon m)
-	endif()
-	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-		target_link_libraries(${PROJECT_NAME}-daemon ${Backtrace_LIBRARIES})
-	endif()
-	if(CMAKE_BUILD_TYPE MATCHES DEBUG AND ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^mips")
-		target_link_libraries(${PROJECT_NAME}-daemon pthread)
-	else()
-		target_link_libraries(${PROJECT_NAME}-daemon ${CMAKE_THREAD_LIBS_INIT})
-	endif()
-
-	if(WIN32)
-		add_executable(${PROJECT_NAME}-raw raw.c ${PROJECT_SOURCE_DIR}/res/win32/icon.obj)
-	else()
-		add_executable(${PROJECT_NAME}-raw raw.c)
-	endif()
-	target_link_libraries(${PROJECT_NAME}-raw ${PROJECT_NAME}_shared)
-	if(${ZWAVE} MATCHES "ON")
-		target_link_libraries(${PROJECT_NAME}-raw stdc++)
-	endif()
-	target_link_libraries(${PROJECT_NAME}-raw ${CMAKE_DL_LIBS})
-	if(NOT WIN32)
-		target_link_libraries(${PROJECT_NAME}-raw m)
-	endif()
-	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-		target_link_libraries(${PROJECT_NAME}-raw ${Backtrace_LIBRARIES})
-	endif()
-	if(CMAKE_BUILD_TYPE MATCHES DEBUG AND ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^mips")
-		target_link_libraries(${PROJECT_NAME}-raw pthread)
-	else()
-		target_link_libraries(${PROJECT_NAME}-raw ${CMAKE_THREAD_LIBS_INIT})
-	endif()
-
-	if(WIN32)
-		add_executable(${PROJECT_NAME}-send send.c ${PROJECT_SOURCE_DIR}/res/win32/icon.obj)
-	else()
-		add_executable(${PROJECT_NAME}-send send.c)
-	endif()
-	target_link_libraries(${PROJECT_NAME}-send ${PROJECT_NAME}_shared)
-	target_link_libraries(${PROJECT_NAME}-send ${CMAKE_DL_LIBS})
-	if(${ZWAVE} MATCHES "ON")
-		target_link_libraries(${PROJECT_NAME}-send stdc++)
-	endif()
-	if(NOT WIN32)
-		target_link_libraries(${PROJECT_NAME}-send m)
-	endif()
-	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-		target_link_libraries(${PROJECT_NAME}-send ${Backtrace_LIBRARIES})
-	endif()
-	if(CMAKE_BUILD_TYPE MATCHES DEBUG AND ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^mips")
-		target_link_libraries(${PROJECT_NAME}-send pthread)
-	else()
-		target_link_libraries(${PROJECT_NAME}-send ${CMAKE_THREAD_LIBS_INIT})
-	endif()
-
-	if(WIN32)
-		add_executable(${PROJECT_NAME}-control control.c ${PROJECT_SOURCE_DIR}/res/win32/icon.obj)
-	else()
-		add_executable(${PROJECT_NAME}-control control.c)
-	endif()
-	target_link_libraries(${PROJECT_NAME}-control ${PROJECT_NAME}_shared)
-	target_link_libraries(${PROJECT_NAME}-control ${CMAKE_DL_LIBS})
-	if(${ZWAVE} MATCHES "ON")
-		target_link_libraries(${PROJECT_NAME}-control stdc++)
-	endif()
-	if(NOT WIN32)
-		target_link_libraries(${PROJECT_NAME}-control m)
-	endif()
-	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-		target_link_libraries(${PROJECT_NAME}-control ${Backtrace_LIBRARIES})
-	endif()
-	if(CMAKE_BUILD_TYPE MATCHES DEBUG AND ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^mips")
-		target_link_libraries(${PROJECT_NAME}-control pthread)
-	else()
-		target_link_libraries(${PROJECT_NAME}-control ${CMAKE_THREAD_LIBS_INIT})
-	endif()
-
-	if(WIN32)
-		add_executable(${PROJECT_NAME}-receive receive.c ${PROJECT_SOURCE_DIR}/res/win32/icon.obj)
-	else()
-		add_executable(${PROJECT_NAME}-receive receive.c)
-	endif()
-	target_link_libraries(${PROJECT_NAME}-receive ${PROJECT_NAME}_shared)
-	if(${ZWAVE} MATCHES "ON")
-		target_link_libraries(${PROJECT_NAME}-receive stdc++)
-	endif()
-	target_link_libraries(${PROJECT_NAME}-receive ${CMAKE_DL_LIBS})
-	if(NOT WIN32)
-		target_link_libraries(${PROJECT_NAME}-receive m)
-	endif()
-	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-		target_link_libraries(${PROJECT_NAME}-receive ${Backtrace_LIBRARIES})
-	endif()
-	if(CMAKE_BUILD_TYPE MATCHES DEBUG AND ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^mips")
-		target_link_libraries(${PROJECT_NAME}-receive pthread)
-	else()
-		target_link_libraries(${PROJECT_NAME}-receive ${CMAKE_THREAD_LIBS_INIT})
-	endif()
-
-	if(WIN32)
-		add_executable(${PROJECT_NAME}-debug debug.c ${PROJECT_SOURCE_DIR}/res/win32/icon.obj)
-	else()
-		add_executable(${PROJECT_NAME}-debug debug.c)
-	endif()
-	target_link_libraries(${PROJECT_NAME}-debug ${PROJECT_NAME}_shared)
-	if(${ZWAVE} MATCHES "ON")
-		target_link_libraries(${PROJECT_NAME}-debug stdc++)
-	endif()
-	target_link_libraries(${PROJECT_NAME}-debug ${CMAKE_DL_LIBS})
-	if(NOT WIN32)
-		target_link_libraries(${PROJECT_NAME}-debug m)
-	endif()
-	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-		target_link_libraries(${PROJECT_NAME}-debug ${Backtrace_LIBRARIES})
-	endif()
-	if(CMAKE_BUILD_TYPE MATCHES DEBUG AND ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^mips")
-		target_link_libraries(${PROJECT_NAME}-debug pthread)
-	else()
-		target_link_libraries(${PROJECT_NAME}-debug ${CMAKE_THREAD_LIBS_INIT})
-	endif()
-
-	if(WIN32)
-		add_executable(${PROJECT_NAME}-uuid uuid.c ${PROJECT_SOURCE_DIR}/res/win32/icon.obj)
-	else()
-		add_executable(${PROJECT_NAME}-uuid uuid.c)
-	endif()
-	target_link_libraries(${PROJECT_NAME}-uuid ${PROJECT_NAME}_shared)
-	if(${ZWAVE} MATCHES "ON")
-		target_link_libraries(${PROJECT_NAME}-uuid stdc++)
-	endif()
-	target_link_libraries(${PROJECT_NAME}-uuid ${CMAKE_DL_LIBS})
-	if(NOT WIN32)
-		target_link_libraries(${PROJECT_NAME}-uuid m)
-	endif()
-	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-		target_link_libraries(${PROJECT_NAME}-uuid ${Backtrace_LIBRARIES})
-	endif()
-	if(CMAKE_BUILD_TYPE MATCHES DEBUG AND ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^mips")
-		target_link_libraries(${PROJECT_NAME}-uuid pthread)
-	else()
-		target_link_libraries(${PROJECT_NAME}-uuid ${CMAKE_THREAD_LIBS_INIT})
-	endif()
-
-	if(WIN32)
-		add_executable(${PROJECT_NAME}-sha256 sha256.c ${PROJECT_SOURCE_DIR}/res/win32/icon.obj)
-	else()
-		add_executable(${PROJECT_NAME}-sha256 sha256.c)
-	endif()
-	target_link_libraries(${PROJECT_NAME}-sha256 ${PROJECT_NAME}_shared)
-	if(${ZWAVE} MATCHES "ON")
-		target_link_libraries(${PROJECT_NAME}-sha256 stdc++)
-	endif()
-	target_link_libraries(${PROJECT_NAME}-sha256 ${CMAKE_DL_LIBS})
-	if(NOT WIN32)
-		target_link_libraries(${PROJECT_NAME}-sha256 m)
-	endif()
-	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-		target_link_libraries(${PROJECT_NAME}-sha256 ${Backtrace_LIBRARIES})
-	endif()
-	if(CMAKE_BUILD_TYPE MATCHES DEBUG AND ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^mips")
-		target_link_libraries(${PROJECT_NAME}-sha256 pthread)
-	else()
-		target_link_libraries(${PROJECT_NAME}-sha256 ${CMAKE_THREAD_LIBS_INIT})
-	endif()
-
-	if(WIN32)
-		add_executable(${PROJECT_NAME}-flash flash.c ${PROJECT_SOURCE_DIR}/res/win32/icon.obj)
-	else()
-		add_executable(${PROJECT_NAME}-flash flash.c)
-	endif()
-	target_link_libraries(${PROJECT_NAME}-flash ${PROJECT_NAME}_shared)
-	if(${ZWAVE} MATCHES "ON")
-		target_link_libraries(${PROJECT_NAME}-flash stdc++)
-	endif()
-	target_link_libraries(${PROJECT_NAME}-flash ${CMAKE_DL_LIBS})
-	if(NOT WIN32)
-		target_link_libraries(${PROJECT_NAME}-flash m)
-	endif()
-	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-		target_link_libraries(${PROJECT_NAME}-flash ${Backtrace_LIBRARIES})
-	endif()
-	if(CMAKE_BUILD_TYPE MATCHES DEBUG AND ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^mips")
-		target_link_libraries(${PROJECT_NAME}-flash pthread)
-	else()
-		target_link_libraries(${PROJECT_NAME}-flash ${CMAKE_THREAD_LIBS_INIT})
-	endif()
-
-	if(WIN32)
-		install(FILES "${PROJECT_SOURCE_DIR}/res/firmware/${PROJECT_NAME}_usb_nano.hex" DESTINATION . COMPONENT ${PROJECT_NAME})
-	endif()
-
-	if(NOT WIN32)
-		if(EXISTS "/usr/local/sbin/${PROJECT_NAME}-send")
-			install(CODE "execute_process(COMMAND rm /usr/local/sbin/${PROJECT_NAME}-send)")
-		endif()
-
-		if(EXISTS "/usr/local/sbin/${PROJECT_NAME}-receive")
-			install(CODE "execute_process(COMMAND rm /usr/local/sbin/${PROJECT_NAME}-receive)")
-		endif()
-
-		if(EXISTS "/usr/local/sbin/${PROJECT_NAME}-control")
-			install(CODE "execute_process(COMMAND rm /usr/local/sbin/${PROJECT_NAME}-control)")
-		endif()
-
-		if(EXISTS "/usr/local/sbin/${PROJECT_NAME}-uuid")
-			install(CODE "execute_process(COMMAND rm /usr/local/sbin/${PROJECT_NAME}-uuid)")
-		endif()
-	endif()
-
-	if(WIN32)
-		install(FILES "${PROJECT_SOURCE_DIR}/LICENSE.txt" DESTINATION . COMPONENT ${PROJECT_NAME})
-		install(FILES "${PROJECT_SOURCE_DIR}/res/win32/libwinpthread-1.dll" DESTINATION . COMPONENT ${PROJECT_NAME})
-		install(FILES "${PROJECT_SOURCE_DIR}/res/win32/Packet.dll" DESTINATION . COMPONENT ${PROJECT_NAME})
-		install(FILES "${PROJECT_SOURCE_DIR}/res/win32/wpcap.dll" DESTINATION . COMPONENT ${PROJECT_NAME})
-		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-daemon.exe DESTINATION . COMPONENT ${PROJECT_NAME})
-		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-raw.exe DESTINATION . COMPONENT ${PROJECT_NAME})
-		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-send.exe DESTINATION . COMPONENT ${PROJECT_NAME})
-		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-control.exe DESTINATION . COMPONENT ${PROJECT_NAME})
-		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-receive.exe DESTINATION . COMPONENT ${PROJECT_NAME})
-		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-debug.exe DESTINATION . COMPONENT ${PROJECT_NAME})
-		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-flash.exe DESTINATION . COMPONENT ${PROJECT_NAME})
-		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-uuid.exe DESTINATION . COMPONENT ${PROJECT_NAME})
-		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-sha256.exe DESTINATION . COMPONENT ${PROJECT_NAME})
-	else()
-		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-daemon DESTINATION sbin COMPONENT ${PROJECT_NAME})
-		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-raw DESTINATION sbin COMPONENT ${PROJECT_NAME})
-		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-send DESTINATION bin COMPONENT ${PROJECT_NAME})
-		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-control DESTINATION bin COMPONENT ${PROJECT_NAME})
-		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-receive DESTINATION bin COMPONENT ${PROJECT_NAME})
-		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-debug DESTINATION sbin COMPONENT ${PROJECT_NAME})
-		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-flash DESTINATION sbin COMPONENT ${PROJECT_NAME})
-		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-uuid DESTINATION bin COMPONENT ${PROJECT_NAME})
-		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-sha256 DESTINATION bin COMPONENT ${PROJECT_NAME})
-		install(CODE "execute_process(COMMAND update-rc.d ${PROJECT_NAME} defaults)")
-		install(CODE "execute_process(COMMAND ldconfig)")
-	endif()
 endif()
 
 if(WIN32)
