--- a/libs/pilight/lua_c/CMakeLists.txt
+++ b/libs/pilight/lua_c/CMakeLists.txt
@@ -4,6 +4,7 @@ set(${PROJECT_NAME}_files "" CACHE INTERNAL "")
 
 add_subdirectory(config)
 add_subdirectory(network)
+add_subdirectory(async)
 add_subdirectory(io)
 
 file(GLOB ${PROJECT_NAME}_sources "${PROJECT_SOURCE_DIR}/*.c")
@@ -14,5 +15,6 @@ set(${PROJECT_NAME}_files
 	${${PROJECT_NAME}_headers}
 	${${PROJECT_NAME}_config_files}
 	${${PROJECT_NAME}_network_files}
+	${${PROJECT_NAME}_async_files}
 	${${PROJECT_NAME}_io_files}
 CACHE INTERNAL "")
