Add MQTT defines and bugfixes

--- a/inc/defines.h.in
+++ b/inc/defines.h.in
@@ -20,6 +20,7 @@
 #define _DEFINES_H_
 
 #cmakedefine WEBSERVER
+#cmakedefine MQTT
 #cmakedefine EVENTS
 
 #define PILIGHT_VERSION					"8.1.5"
@@ -44,6 +45,11 @@
 	#define WEBSERVER_CHUNK_SIZE 	4096
 	#define WEBGUI_WEBSOCKETS			1
 	#cmakedefine WEBSERVER_HTTPS	1
+#endif
+
+#ifdef MQTT
+	#define MQTT_PORT							1883
+	#define MQTT_ENABLE						1
 #endif
 
 #define MAX_CLIENTS							30
