--- a/inc/defines.h.in
+++ b/inc/defines.h.in
@@ -11,6 +11,7 @@
 #define _DEFINES_H_
 
 #cmakedefine WEBSERVER
+#cmakedefine MQTT
 #cmakedefine EVENTS
 
 #define PILIGHT_VERSION					"8.1.1"
@@ -37,6 +38,10 @@
 #endif
 
 #define WEBSERVER_CHUNK_SIZE 	4096
+#ifdef MQTT
+	#define MQTT_PORT							1883
+	#define MQTT_ENABLE						1
+#endif
 
 #define MAX_CLIENTS							30
 #define BUFFER_SIZE							1025
