Properly install systemd files and updates deb description

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -496,7 +496,8 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 		endif()
 
 		install(PROGRAMS ${PROJECT_SOURCE_DIR}/res/init/${PROJECT_NAME}.sysv DESTINATION /etc/init.d/ RENAME ${PROJECT_NAME})
-		install(PROGRAMS ${PROJECT_SOURCE_DIR}/res/init/${PROJECT_NAME}.systemd DESTINATION etc/systemd/system/ RENAME ${PROJECT_NAME}.service)
+		install(PROGRAMS ${PROJECT_SOURCE_DIR}/res/init/${PROJECT_NAME}.systemd DESTINATION /etc/systemd/system/ RENAME ${PROJECT_NAME}.service)
+		install(PROGRAMS ${PROJECT_SOURCE_DIR}/res/init/${PROJECT_NAME}-wait-for-route.systemd DESTINATION /etc/systemd/system/ RENAME ${PROJECT_NAME}-wait-for-route.service)
 		install(PROGRAMS ${PROJECT_SOURCE_DIR}/res/init/${PROJECT_NAME}.upstart DESTINATION /etc/init/ RENAME ${PROJECT_NAME}.conf)
 		install(FILES ${PROJECT_SOURCE_DIR}/res/config/config.json-default DESTINATION /etc/${PROJECT_NAME}/ RENAME config.json COMPONENT ${PROJECT_NAME})
 	else()
