--- a/libs/pilight/lua_c/network/CMakeLists.txt
+++ b/libs/pilight/lua_c/network/CMakeLists.txt
@@ -3,4 +3,6 @@ project(pilight_lua_c_network)
 file(GLOB ${PROJECT_NAME}_sources "${PROJECT_SOURCE_DIR}/*.c")
 file(GLOB ${PROJECT_NAME}_headers "${PROJECT_SOURCE_DIR}/*.h")
 
+include(CMakeExclude.txt)
+
 set(${PROJECT_NAME}_files ${${PROJECT_NAME}_sources} ${${PROJECT_NAME}_headers} CACHE INTERNAL "")
