Remove GCC optimalizations on debug build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,10 +69,13 @@ if(CMAKE_BUILD_TOOL MATCHES "make")
   endif(NOT CMAKE_C_FLAGS MATCHES "-Wall")
 endif(CMAKE_BUILD_TOOL MATCHES "make")
 
-IF(CMAKE_COMPILER_IS_GNUCC)
+string(TOUPPER ${CMAKE_BUILD_TYPE} BUILD_TYPE)
+add_definitions(-D${BUILD_TYPE})
+
+IF(CMAKE_COMPILER_IS_GNUCC MATCHES "Release")
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2")
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
-ENDIF(CMAKE_COMPILER_IS_GNUCC)
+ENDIF()
 
 if(NOT WIN32)
   string(ASCII 27 Esc)
